administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -77,7 +77,7 @@ $useFontAwesome=$config->getParameter('useFontAwesome');
     $offsetX:10px;
     @each $fileBtn in $fileBtns {
         
-        $i: list.index($fileBtns, $fileBtn);
+        $i: index($fileBtns, $fileBtn);
      
         .file-list .file-item button.#{$fileBtn}-btn {
             top:$offsetY+30px*$i
