--- a/app/sharedGeneratedStyles.customCSS.css
+++ b/app/sharedGeneratedStyles.customCSS.css
@@ -1,10 +1,4 @@
 
- 
-
-
-
-
-
 
 .project-type-missing-tasks-hint {
     background-image:url("<?php echo UrlFrom("{assets}/Control Panel Icons/tree.png?tint=rgb(198, 175, 79)"); ?>");
@@ -40,40 +34,56 @@ button.btn-search-list {
 }
 
 
+<?php 
+$config=GetWidget('dashboardConfig');
 
-    
-    $fileBtns:'remove', 'edit', 'download';
-    $offsetY:10px;
-    $offsetX:10px;
-    @each $fileBtn in $fileBtns {
-        
-        $i: index($fileBtns, $fileBtn);
-     
-        .file-list .file-item button.#{$fileBtn}-btn {
-            top:$offsetY+30px*($i - 1);
-        }
-                
-        .layout-list .file-list .file-item button.#{$fileBtn}-btn {
-            top:10px;
-            right:$offsetX+30px*($i - 1);
-        }
-        
-        
-    }
-    
-    
-@if not $useFontAwesome{
 
-    @each $n, $icon in $fileIcons {
-        file-item .#{$n}-btn {
-            background-image:url($icon);
-        }
-    }  
+
+$useFontAwesome=$config->getParameter('useFontAwesome');
+if($useFontAwesome){
+    ?>
+    
+    <?php
 }
+
+
+    $offsetY=10;
+    $offsetX=10;
+    foreach(['remove', 'edit', 'download'] as $fileFn){
+        
+
+            ?>
+               .file-list .file-item button.<?php echo $fileFn; ?>-btn {
+                    top:<?php echo $offsetY; $offsetY+=30;?>px;
+                }
+                
+                .layout-list .file-list .file-item button.<?php echo $fileFn; ?>-btn {
+                    top:10px;
+                    right:<?php echo $offsetX; $offsetX+=30;?>px;
+                }
+           <?php  
+        
     
-    
-    
-@if $showSplitProjectDetail{
+    }
+
+
+if(!$useFontAwesome){
+    foreach(['remove', 'edit', 'download'] as $fileFn){
+        $editIcon=$config->getParameter('file'.ucfirst($fileFn).'BtnIcon', array());
+            if(!empty($editIcon)){
+
+            ?>
+                .file-item .<?php echo $fileFn; ?>-btn {
+                    background-image:url("<?php echo UrlFrom($editIcon[0].'?thumb=x>100y>100'); ?>");
+                }
+           <?php  
+        }
+     
+    }
+}
+
+if($config->getParameter('showSplitProjectDetail')){
+    ?>
    
    [data-view="splitProjectDetail"]>div>div{
         display:inline-table;
@@ -81,97 +91,150 @@ button.btn-search-list {
         height: 100%;
     }
     
+    
+    
+    <?php
+    
+}
+
+foreach(['apple', 'google'] as $mobile){
+    $appIcon=$config->getParameter($mobile.'AppIcon', array());
+        if(!empty($appIcon)){
+
+        ?>
+            .<?php echo $mobile; ?>-app-link{
+                
+                background-image:url("<?php echo UrlFrom($appIcon[0].'?thumb=x>200y>100'); ?>");
+            }
+       <?php  
+    }
+   
+    
+    
+}
+
+if(!$useFontAwesome){
+    $addIcon=$config->getParameter('fileUploadBtnIcon', array());
+    if(!empty($addIcon)){
+
+        ?>
+        .file-list .droppable .add-btn {
+            background-image:url("<?php echo UrlFrom($addIcon[0].'?thumb=x>100y>100'); ?>");
+        }
+        <?php
+
+    }
 }
 
 
-    
-    
-    @each $n, $icon in $mobileIcons {
-        
-        @if $icon {
-            .#{$n}-app-link{
-                background-image:url($icon);
+
+$menuIconDefault=$config->getParameter('defaultMenuIcon')[0];
+
+
+
+
+if(!$useFontAwesome){
+    foreach($config->getParameters() as $key=>$value){
+        foreach(array('main', 'people', 'accounting','community', 'configuration') as $section){
+            if(strpos($key, $section.'-')===0){
+                $icon=$menuIconDefault;
+                if(!empty($value)){
+                    $icon=$value[0];
+                }
+                ?>
+                li.menu-<?php echo $key; ?>:before{
+                    background-image:url("<?php echo UrlFrom($icon."?thumb=>20x>20&tint=".$config->getParameter("menuIconColor", "rgb(180,180,180)")); ?>");
+                }
+                li.menu-<?php echo $key; ?>.active:before{
+                    background-image:url("<?php echo UrlFrom($icon."?thumb=>20x>20&tint=".$config->getParameter("menuIconTint")); ?>");
+                }
+                
+                
+                .label-<?php echo $key; ?>{
+                    background-image:url("<?php echo UrlFrom($icon."?thumb=>20x>20&tint=".$config->getParameter("menuIconColor", "rgb(180,180,180)")); ?>");
+                }
+                
+                <?php
             }
         }
-     }
-
-
-
-
-@if not $useFontAwesome{
-    @if $addIcon{
-    
-        .file-list .droppable .add-btn {
-            background-image:url($addIcon);
-        }
-    
-    }
-    
-}
-    
-
-
-@if not $useFontAwesome{
-
-    @each $n, $icon in $sectionIcons {
-        li.menu-#{$n}:before{
-            background-image:url($icon);
-        }
-     
-        .label-#{$n}{
-            background-image:url($icon);
-        }
-    }
- 
- 
-    @each $n, $icon in $sectionIconsActive {
-        li.menu-#{$n}.active:before{
-            background-image:url($icon);
-        }
     }
 }
 
 
 
 
+$applicationLogo=$config->getParameter('applicationLogo', array());
+if(empty($applicationLogo)){
+    $applicationLogo=$menuIconDefault;
+}else{
+    $applicationLogo=$applicationLogo[0];
+}
 
 
+
+
+?>
  .application-logo {
 
-    background-image:url($applicationLogo);
+    background-image:url("<?php echo UrlFrom($applicationLogo."?thumb=>200x>200"); ?>");
 } 
 
+ 
 
-@if $applicationLogoAlt {
+<?php
 
+
+$altLogo=$config->getParameter('applicationLogoAlt', array());
+if(!empty($altLogo)){
+    
+    $altLogo=$altLogo[0];
+    ?>
     .alt-logo {
 
-        background-image:url($applicationLogoAlt);
+        background-image:url("<?php echo UrlFrom($altLogo."?thumb=>200x>200"); ?>");
     }  
-  
-}
-@else{
     
-
+    <?php
+}else{
+    
+    ?>
     .alt-logo {
        display:none;
     }
-
+    <?php
 }
 
 
 
-.gather-logo {
-    background-image:url($gatherLogo);
+
+$gatherLogo=$config->getParameter('gatherLogo', array());
+        if(empty($gatherLogo)){
+            $gatherLogo=$menuIconDefault;
+        }else{
+            $gatherLogo=$gatherLogo[0];
+        }
+    ?>
+ .gather-logo {
+
+    background-image:url("<?php echo UrlFrom($gatherLogo."?thumb=>200x>200"); ?>");
 }  
 
-.gather-icon {
-    background-image:url($gatherIcon);
+<?php
+$gatherIcon=$config->getParameter('gatherIcon', array());
+        if(empty($gatherIcon)){
+            $gatherIcon=$gatherLogo;
+        }else{
+            $gatherIcon=$gatherIcon[0];
+        }
+    ?>
+ .gather-icon {
+    
+    background-image:url("<?php echo UrlFrom($gatherIcon."?thumb=>200x>200"); ?>");
 } 
 
 
 .navigation-menu li.menu-links-gather:before{
-     background-image:url($gatherIcon);
+     background-image:url("<?php echo UrlFrom($gatherIcon."?thumb=>200x>200"); ?>");
      content:"";
      width: 30px;
      height: 30px;
@@ -179,20 +242,30 @@ button.btn-search-list {
 }
 
 
-
-@if not $useFontAwesome{
-
-    .attachment-indicator {
-        background-image:url($attachmentIcon);
+<?php 
+if(!$useFontAwesome){
+    $attachmentIcon=$config->getParameter('attachmentIcon', array());
+    if(empty($attachmentIcon)){
+        $attachmentIcon=$attachmentIcon;
+    }else{
+        $attachmentIcon=$attachmentIcon[0];
     }
+
+    ?>
+    
+    .attachment-indicator {
+        background-image:url("<?php echo UrlFrom($attachmentIcon."?tint=".$config->getParameter("attachmentTint", "rgb(180,180,180)")); ?>");
+    }
+
 
     .discussion button.upload-button {
-        background-image: url($attachmentIcon);
+        background-image: url("<?php echo UrlFrom($attachmentIcon."?tint=".$config->getParameter("attachmentTint", "rgb(180,180,180)")); ?>");
        
     }
-    
-}
 
+<?php
+}
+?>
 
 .discussion button.upload-button {
     font-size: 0;
@@ -203,15 +276,17 @@ button.btn-search-list {
     position: relative;
 }
 
+<?php 
 
-@if not $useFontAwesome{
 
+if(!$useFontAwesome){
+    ?>
     .field-value-module.with-description .field-value:after{
          background-image: url("<?php echo UrlFrom("{assets}/Control Panel Icons/text.png?tint=rgb(180,180,180)"); ?>");
     }
-
+<?php 
 }
-
+?>
 .field-value-module.with-description .field-value:after{
     content: "";
     width: 20px;
@@ -224,120 +299,208 @@ button.btn-search-list {
 }
 
 
-@if not $useFontAwesome{
 
-    .synopsis-item {
-        background-image:url($menuIconDefault);
+<?php
+
+
+
+if(!$useFontAwesome){
+    ?>
+.synopsis-item {
+    background-image:url("<?php echo UrlFrom($menuIconDefault."?tint=rgb(180,180,180)"); ?>");
+}
+<?php 
+}
+?>
+
+
+
+
+<?php 
+
+
+if(!$useFontAwesome){
+    
+        $starredIcon=$config->getParameter('starIcon', array());
+        if(empty($starredIcon)){
+            $starredIcon=$menuIconDefault;
+        }else{
+            $starredIcon=$starredIcon[0];
+        }
+    ?>
+ .starred-indicator {
+
+    background-image:url("<?php echo UrlFrom($starredIcon."?tint=rgb(180,180,180)"); ?>");
+}   
+.starred-indicator.starred {
+
+    background-image:url("<?php echo UrlFrom($starredIcon."?tint=".$config->getParameter("starTint", "rgb(180,180,180)")); ?>");
+}
+
+
+.starred-tasks {
+    background-image:url("<?php echo UrlFrom($starredIcon."?tint=".$config->getParameter("starTint", "rgb(180,180,180)")); ?>");
+    border-color:<?php echo $config->getParameter("starTint", "rgb(180,180,180)"); ?>;
+    
+}
+
+<?php 
+}
+?>
+
+
+
+
+
+<?php 
+
+
+if(!$useFontAwesome){
+
+
+    $priorityIcon=$config->getParameter('priorityIcon', array());
+    if(empty($priorityIcon)){
+        $priorityIcon=$menuIconDefault;
+    }else{
+        $priorityIcon=$priorityIcon[0];
     }
 
-    .starred-indicator {
-    
-        background-image:url($starredIcon);
-    }   
-    .starred-indicator.starred {
-    
-        background-image:url($starredIconActive);
-    }
-    
-    .starred-tasks {
-        background-image:url($starredIconActive);
-        border-color:$starredTint;
-        
+     $overdueIcon=$config->getParameter('overdueIcon', array());
+    if(empty($overdueIcon)){
+        $overdueIcon=$menuIconDefault;
+    }else{
+        $overdueIcon=$overdueIcon[0];
     }
 
+
+    $remainingIcon=$config->getParameter('remainingIcon', array());
+    if(empty($remainingIcon)){
+        $remainingIcon=$menuIconDefault;
+    }else{
+        $remainingIcon=$remainingIcon[0];
+    }
+
+
+
+    ?>
     .priority-indicator {
-        background-image:url($priorityIcon);
+
+        background-image:url("<?php echo UrlFrom($priorityIcon."?tint=rgb(180,180,180)"); ?>");
     }   
     .priority-indicator.priority {
-        background-image:url($priorityIconTint);
+
+        background-image:url("<?php echo UrlFrom($priorityIcon."?tint=".$config->getParameter("priorityTint", "rgb(180,180,180)")); ?>");
     }
 
     .priority-tasks {
-        background-image:url($priorityIconTint);
-        border-color:$priorityTint;
+        background-image:url("<?php echo UrlFrom($priorityIcon."?tint=".$config->getParameter("priorityTint", "rgb(180,180,180)")); ?>");
+        border-color:<?php echo $config->getParameter("priorityTint", "rgb(180,180,180)"); ?>;
         
     }
 
 
 
     .overdue-tasks {
-        background-image:url($overdueIcon);
-        border-color:$overdueTint;
+        background-image:url("<?php echo UrlFrom($overdueIcon."?tint=".$config->getParameter("overdueTint", "rgb(180,180,180)")); ?>");
+        border-color:<?php echo $config->getParameter("overdueTint", "rgb(180,180,180)"); ?>;
         
-    }
-    
-    .segment.overdue{
-        background-image:url($overdueIconSegment);
-    }
-    
-    .segment.duedate, .segment.complete{
-         background-image:url($overdueIconSegmentComplete);
     }
 
 
     .remaining-tasks {
-        background-image:url($remainingIcon);
-        border-color:$remainingTint;
+        background-image:url("<?php echo UrlFrom($remainingIcon."?tint=".$config->getParameter("remainingTint", "rgb(180,180,180)")); ?>");
+        border-color:<?php echo $config->getParameter("remainingTint", "rgb(180,180,180)"); ?>;
         
     }
 
 
-    
-    
+    .segment.overdue{
+        background-image:url("<?php echo UrlFrom($overdueIcon."?tint=rgba(50,50,50)"); ?>");
+    }
     .segment.completed{
-         background-image:url($remainingIconCompleted);
+         background-image:url("<?php echo UrlFrom($remainingIcon."?tint=rgba(60, 179, 113)"); ?>");
     }
     .segment.created{
-         background-image:url($starredIconCreated);
+         background-image:url("<?php echo UrlFrom($starredIcon."?tint=rgba(106, 124, 233)"); ?>");
+    }
+    .segment.duedate, .segment.complete{
+         background-image:url("<?php echo UrlFrom($overdueIcon."?tint=rgba(60, 179, 113)"); ?>");
+    }
+
+<?php 
+}
+?>
+
+
+
+
+<?php 
+
+
+foreach(GetPlugin("ReferralManagement")->getRoleIcons() as $role=>$icon){
+    ?>
+    .role-<?php echo $role; ?>{
+        background-image:url('<?php echo UrlFrom($icon); ?>?grayscale');
+        filter: grayscale(100);
     }
     
-
+    .role-<?php echo $role; ?>.active{
+        background-image:url('<?php echo UrlFrom($icon); ?>');
+        filter: grayscale(0);
+    }
+ <?php   
 }
 
 
-     @each $n, $icon in $roleIcons {
-        .role-#{$n}{
-            background-image:url($icon);
-            filter: grayscale(100);
-        }
-     }
-     
-     @each $n, $icon in $roleIconsActive {
-        .role-#{$n}.active{
-            background-image:url($icon);
-            filter: grayscale(0);
-        }
-     }
 
 
-
-
-    @each $n, $icon in $mediaIcons {
-        .upload-btns span.#{$n}.noIcon {
-            background-image:url($icon);
+foreach(['image', 'document', 'layer', 'audio', 'video'] as $mime){
+    $mediaIcon=$config->getParameter($mime.'UploadIcon', array());
+        if(empty($mediaIcon)){
+            $mediaIcon=$menuIconDefault;
+        }else{
+            $mediaIcon=$mediaIcon[0];
         }
-    }
-   
-    @each $n, $icon in $navIcons {
-        .#{$n}-btn {
-            background-image:url($icon);
+    ?>
+        .upload-btns span.<?php echo $mime?>.noIcon {
+            background-image:url("<?php echo UrlFrom($mediaIcon."?tint=".$config->getParameter("uploadTint", "rgb(180,180,180)")); ?>");
         }
-    }
+    <?php
     
-    @each $n, $icon in $navIconsHover {
-        .#{$n}-btn:hover {
-            background-image:url($icon);
+    
+}
+
+
+
+foreach(['prev', 'next'] as $nav){
+    $navIcon=$config->getParameter($nav.'NavIcon', array());
+        if(empty($navIcon)){
+            $navIcon=$menuIconDefault;
+        }else{
+            $navIcon=$navIcon[0];
         }
-      
-    }
+    ?>
+       .<?php echo $nav; ?>-btn {
+            background-image:url("<?php echo UrlFrom($navIcon."?tint=".$config->getParameter("uploadTint", "rgb(180,180,180)")); ?>");
+        }
+        .<?php echo $nav; ?>-btn:hover {
+            background-image:url("<?php echo UrlFrom($navIcon."?tint=".$config->getParameter("menuIconTint")); ?>");
+        }
+    <?php
+    
+    
+}
 
 
-        
-        
-        @if $backgroundImage {
-            
+
+$backgroundImage=$config->getParameter('backgroundImage', array());
+        if(!empty($backgroundImage)){
+          
+            $backgroundImage=$backgroundImage[0];
+            ?>
+
             .ui-view.dashboard-main:after {
-                background-image: url($backgroundImage);
+                background-image: url("<?php echo UrlFrom($backgroundImage."?thumb=>200x>200"); ?>");
                 position: fixed;
                 width: 100%;
                 height: 100%;
@@ -349,15 +512,20 @@ button.btn-search-list {
                 background-size: cover;
                 filter: blur(10px);
             }
-                
+            <?php
         }
         
         
         
-        @if $optionsMenuIcon {
+        
+        $optionsMenuIcon=$config->getParameter('optionsMenuIcon', array());
+        if(!empty($optionsMenuIcon)){
+          
+            $optionsMenuIcon=$optionsMenuIcon[0];
+            ?>
 
             .inline-btn.optionlist:before {
-                background-image: url($optionsMenuIcon);
+                background-image: url("<?php echo UrlFrom($optionsMenuIcon."?thumb=x>100y>100&tint=".$config->getParameter("menuIconColor", "rgb(180,180,180)")); ?>");
                 display: inline-block;
                 width: 6px;
                 height: 25px;
@@ -367,13 +535,18 @@ button.btn-search-list {
                 background-repeat: no-repeat;
             }
             .inline-btn.optionlist:hover:before {
-                background-image: url($optionsMenuIconHover);
+             background-image: url("<?php echo UrlFrom($optionsMenuIcon."?thumb=x>100y>100&tint=".$config->getParameter("menuIconTint")); ?>");
             }
+            <?php
         }
+        
+        
+         $surveyMenuIcon=$config->getParameter('surveyMenuIcon', array());
+        if(!empty($surveyMenuIcon)){
+          
+            $surveyMenuIcon=$surveyMenuIcon[0];
+            ?>
             
-        
-        @if $surveyMenuIcon {
-        
             .survey-link{
                 
                 text-align: left;
@@ -381,7 +554,7 @@ button.btn-search-list {
             }
 
             .survey-link a:before, .navigation-menu li.menu-links-survey:before {
-                background-image: url($surveyMenuIcon);
+                background-image: url("<?php echo UrlFrom($surveyMenuIcon."?thumb=x>100y>100&tint=".$config->getParameter("menuIconColor", "rgb(180,180,180)")); ?>");
                 content:"";
             }
             .survey-link a:before {
@@ -393,41 +566,49 @@ button.btn-search-list {
                 vertical-align: middle;
             }
             .survey-link a:hover:before  {
-                background-image: url($surveyMenuIconHover);
+                background-image: url("<?php echo UrlFrom($surveyMenuIcon."?thumb=x>100y>100&tint=".$config->getParameter("menuIconTint")); ?>");
             }
-        
+            <?php
         }
         
         
-        @if $slackMenuIcon {
+        $slackMenuIcon=$config->getParameter('slackMenuIcon', array());
+        if(!empty($slackMenuIcon)){
+          
+            $slackMenuIcon=$slackMenuIcon[0];
+            ?>
             
             .survey-link a.slack-link:before,  .navigation-menu li.menu-links-slack:before {
-                background-image: url($slackMenuIcon);
+                background-image: url("<?php echo UrlFrom($slackMenuIcon."?thumb=x>100y>100"); ?>");
                 content:"";
             }
-        }    
-        
-        
-        @if not $showUsersRoles{
             
-           .user-detail .user-role, .user-detail .user-community{
+            <?php
+        }
+        
+         if(!$config->getParameter("showUsersRoles")){
+            ?>
+        
+            .user-detail .user-role, .user-detail .user-community{
                 display:none;
-            } 
-            
-        }
-        @else{
-           .user-detail .user-role, .user-detail .user-community{
+            }
+            <?php
+        }else{
+            ?>
+            .user-detail .user-role, .user-detail .user-community{
                
-            } 
+            }
+            <?php
         }
-        
-        @if not $showFileThumbnails{
-            
+                
+        if(!$config->getParameter("showFileThumbnails")){
+            ?>
             .image.attachment-thumb{
                 display:none;
             }
-            
+            <?php
         }
         
-    
-
+        
+        
+?>
