administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -52,6 +52,13 @@ button:focus {outline:0;}
         width: auto;
         max-width: 16%;
         padding-right:15px
+        
+        span.indicator-switch {
+            margin: 0;
+            position: relative;
+            top: -2px;
+        }
+        
     }
     
     .tag-width span.field-value {
@@ -61,6 +68,9 @@ button:focus {outline:0;}
         margin-bottom: 3.5px;
         font-size: 0;
     }
+    
+    
+    
 
 }
 
