administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -51,7 +51,7 @@ button:focus {outline:0;}
         /* min-width: 250px; */
         width: auto;
         max-width: 16%;
-        padding-right:15px
+        padding-right:15px;
         
         span.indicator-switch {
             margin: 0;
