administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -1091,7 +1091,7 @@ button.primary-btn.nav-new-btn.view-selection:before{
 .btn.inline-remove{
     
     &:after {
-        content: "\f040";
+        content: "\f00d";
         
     }
     color: crimson;
