--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -589,7 +589,9 @@ ul.project, ul.user{
     padding: 30px 40px;
     margin: 0;
     background-color: rgba(0,0,0,0.03);
-    background: linear-gradient(0deg, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.05) 100%);
+    background: linear-gradient(0deg, rgba(0,0,0,0.07) 0%, rgba(0,0,0,0.05) 100%);
+    border-bottom: 2px solid white;
+    border-top: 2px solid white;
 }
 
 
