administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2,7 +2,6 @@
 
 /*Login*/
 
-
 body.body-overlayed>#viewControllerApp>div>div>.ui-view {
     filter: blur(5px) grayscale(1);
 }
@@ -17,10 +16,6 @@ button:focus {outline:0;}
     background: rgba(0,0,0,0.1);
     height: 58px;
 
-    button{
-        display:none;
-        
-    }
 
     [data-col="created"] {
         display: none;
@@ -56,7 +51,14 @@ button:focus {outline:0;}
         /* min-width: 250px; */
         width: auto;
         max-width: 16%;
-        padding-right:15px
+        padding-right:15px;
+        
+        span.indicator-switch {
+            margin: 0;
+            position: relative;
+            top: -2px;
+        }
+        
     }
     
     .tag-width span.field-value {
@@ -66,6 +68,9 @@ button:focus {outline:0;}
         margin-bottom: 3.5px;
         font-size: 0;
     }
+    
+    
+    
 
 }
 
