administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -35,6 +35,11 @@ span.field-value.is-dark {
     }
 }
 
+
+.ui-list-view .ui-view.section-module.category-projects {
+    background-color: #b4deda;
+}
+
 [data-view="tagsDetail"] .primary-btn, [data-view="tagsDetail"] [data-view="tagsDetailItem"]:hover  .tag-item .primary-btn {
     opacity:0.4;
 }
