--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -42,6 +42,16 @@ span.field-value.is-dark {
     &.category-projects, &.parent-category-projects.current-filter {
         background-color: #b4deda;
     }
+    
+    &.parent-category-projects.dataset-item {
+        min-height:80px;
+        .dataset-description {
+            display:none;
+        }
+    }
+
+
+    
 }
 
 [data-view="tagsDetail"] .primary-btn, [data-view="tagsDetail"] [data-view="tagsDetailItem"]:hover  .tag-item .primary-btn {
