administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -45,6 +45,7 @@ span.field-value.is-dark {
     
     &.parent-category-projects.dataset-item {
         min-height:30px;
+        max-width: 200px;
         .dataset-description {
             display:none;
         }
