administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -199,6 +199,11 @@ $mainStyleColor:#efa82c;
         }
         
     }
+    
+    
+    ul.user-roles li {
+        filter: invert(1);
+    }
 
 
 }
