administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -162,6 +162,7 @@ button.primary-btn.nav-new-btn.view-selection:before {
         background-image: url($loginImage);
         background-size: cover;
         background-blend-mode: luminosity;
+        background-position: center;
     }
 
     
