--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -111,6 +111,14 @@ button.primary-btn.nav-new-btn.view-selection:before {
     text-align: center;
     border-radius: 2px;
     cursor: pointer;
+    
+    &.is-light {
+        color: black;
+    }
+    &.is-dark {
+        color: white;
+    }
+    
 }
 
 .field-value-module.inline.icon:before {
