--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -463,7 +463,7 @@ button.selectable{
 }
 
 
-.primary-btn {
+.primary-btn, .primary-btn.selectable {
     &.pending{
         background-color:crimson;
     }
