administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -463,7 +463,7 @@ button.selectable{
 }
 
 
-.primary-btn, .primary-btn.selectable {
+.primary-btn, .primary-btn.selectable, .primary-btn.selectable.selected {
     &.pending{
         background-color:crimson;
     }
