administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -482,7 +482,7 @@ button.selectable{
         &.selected{
             background-color:$pendingColor;
             border-color: transparent;
-            color:white;
+            color:$buttonTextColor;
         }
         
     }
@@ -493,7 +493,7 @@ button.selectable{
         &.selected{
             background-color:$implementedColor;
             border-color: transparent;
-            color:white;
+            color:$buttonTextColor;
         }
         
         
