administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -1003,7 +1003,7 @@ button.inline-logout {
 }
 
 [data-view="splitProjectDetail"].ui-view.inset-menu-shading {
-        display: contents;
+        max-width: unset;
     }
 
 
