--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -409,6 +409,7 @@ button.inline-btn, button.primary-btn {
         background-color: $addColor;
         
         &:hover{
+            transition: background-color 0.3s;
             background-color: $addColorHover;
         }
     }
