administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -551,6 +551,13 @@ button.selectable{
         }
     }
     &.remove{}
+    &.report{
+        background-color:$reportColor;
+        &:hover{
+             background-color:$reportColorHover;
+        }
+        
+    }
     &.edit{
         background-color:$editColor;
         &:hover{
