--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -29,6 +29,20 @@ $buttonTextColor:black;
 $leftPanelColor:#222222;
 
 
+.form-list [data-view="singleTaskListItemDetail"] {
+    display: inline-block;
+    width: calc( 100% - 75px );
+    position: relative;
+    
+    
+    .inline-btn.remove {
+        position: absolute;
+        right: -85px;
+        top: -6px;
+        padding: 6px 10px;
+    }
+}
+
 
 
 
