administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/adminStyles.customCSS.css
+++ b/app/adminStyles.customCSS.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 .dark .navigation-menu button.admin-only, .dark .inline-navigation-menu button.admin-only {
     padding: 5px 10px;
     border-radius: 24px;
