--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -79,11 +79,12 @@ button.inline-edit, .btn.inline-edit, .btn.inline-remove{
         width: auto;
         max-width: 16%;
         padding-right:15px;
+        vertical-align: top;
         
         span.indicator-switch {
             margin: 0;
             position: relative;
-            top: -2px;
+            top: 10px;
         }
         
     }
