administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -9,6 +9,14 @@ body.body-overlayed>#viewControllerApp>div>div>.ui-view {
 button:focus {outline:0;}
 
 
+.pro-tip-hint.inline-tip{
+    width: 400px;
+    display: block;
+    float: unset;
+    padding-left: 18px;
+}
+
+
 button.inline-edit, .btn.inline-edit, .btn.inline-remove{
    
     &:after {
