--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -3034,7 +3034,7 @@ img.static-map {
     }
 
     
-    .ui-view.left-panel {
+    .ui-view.left-panel[data-view="leftPanel"] {
 
         min-width: 180px;
         width: 180px;
@@ -3090,7 +3090,7 @@ img.static-map {
         background-position: center;
     }
 
-    .ui-view.left-panel{
+    .ui-view.left-panel[[data-view="leftPanel"]]{
         width:100px;
         min-width:100px;
     }
