administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -4087,6 +4087,7 @@ span.navigation-menu.settings-menu {
                 span{
                     width: 24px;
                     font-size: 0;
+                    float: left;
                 }
              }
     
